[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Dialogs/SplashDialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Pixelorama Logo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Splash Art.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Roboto-Small.tres" type="DynamicFont" id=4]

[node name="SplashDialog" type="WindowDialog"]
margin_right = 400.0
margin_bottom = 399.0
rect_min_size = Vector2( 400, 380 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contents" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PixeloramaLogo" type="TextureRect" parent="Contents"]
margin_left = 50.0
margin_right = 350.0
margin_bottom = 40.0
size_flags_horizontal = 4
texture = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="Contents"]
margin_top = 44.0
margin_right = 400.0
margin_bottom = 48.0

[node name="SplashArt" type="TextureRect" parent="Contents"]
margin_left = 12.0
margin_top = 52.0
margin_right = 387.0
margin_bottom = 302.0
rect_min_size = Vector2( 375, 250 )
size_flags_horizontal = 4
texture = ExtResource( 3 )
expand = true

[node name="ArtCredits" type="Button" parent="Contents"]
margin_top = 306.0
margin_right = 400.0
margin_bottom = 326.0
mouse_default_cursor_shape = 2
text = "Art by Erevoid"
flat = true

[node name="CheckBox" type="CheckBox" parent="Contents"]
margin_top = 330.0
margin_right = 400.0
margin_bottom = 354.0
text = "Don't show on the next startup"

[node name="HSeparator2" type="HSeparator" parent="Contents"]
margin_top = 358.0
margin_right = 400.0
margin_bottom = 362.0

[node name="DevelopedBy" type="Label" parent="Contents"]
margin_top = 366.0
margin_right = 400.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 4 )
text = "Pixelorama v0.6 - Developed by Orama Interactive"
align = 1

[node name="Copyright" type="Label" parent="Contents"]
margin_top = 383.0
margin_right = 400.0
margin_bottom = 396.0
custom_fonts/font = ExtResource( 4 )
text = "Copyright 2019-2020 Orama Interactive"
align = 1
[connection signal="about_to_show" from="." to="." method="_on_SplashDialog_about_to_show"]
[connection signal="pressed" from="Contents/ArtCredits" to="." method="_on_ArtCredits_pressed"]
[connection signal="toggled" from="Contents/CheckBox" to="." method="_on_CheckBox_toggled"]
